feat(i18n): 添加助手设置和模型设置的国际化文本
refactor(settings): 移除助手设置标签页并调整助手编辑逻辑

- 新增zh-cn语言环境下助手设置和模型设置的标签文本
- 从模型设置页面移除助手设置标签页
- 修改助手编辑逻辑，直接传递助手对象而非ID

--- a/bytecubpdf/src/shared/i18n/locales/zh-cn/settings/model.json
+++ b/bytecubpdf/src/shared/i18n/locales/zh-cn/settings/model.json
@@ -10,6 +10,7 @@
   },
   "platformName": "平台名称",
   "platformNamePlaceholder": "请输入平台名称",
+  "tab": "模型设置",
   "protocolType": "协议类型",
   "protocolTypePlaceholder": "请选择协议类型",
   "apiKey": "API密钥",
